# OpenCL-Tutorial

./: .clang-format  CMakeLists.txt
01/: CMakeLists.txt  device.c  device.h  deviceInfo.c
02/: CMakeLists.txt  vadd.c  vadd.h
inc/: err_code.h
lib/: CMakeLists.txt  device_info.c  err_code.c  wtime.c
